# email-janitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yml  gmail_auth.py  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml
docs/design/: email_processor_flow.excalidraw
email_janitor/: __init__.py  agent.py  callbacks.py  config.py  email_collector.py  gmail_client.py  main.py
email_janitor/instructions/: email_classifier_agent.py
email_janitor/models/: schemas.py
email_janitor/sub_agents/: classification_coordinator.py  critic_agent.py  email_classifier.py  email_classifier_agent.py  email_collector.py  email_collector_agent.py  email_loop_agent.py  email_loop_coordinator.py  email_processor.py
email_janitor/tools/: gmail_client.py
src/email_janitor/: __main__.py  agent.py  callbacks.py  config.py  main.py
src/email_janitor/agents/: __init__.py  email_classifier_agent.py  email_collector_agent.py  email_labeler_agent.py  root_agent.py
src/email_janitor/callbacks/: __init__.py  callbacks.py
src/email_janitor/config/: __init__.py  app.py  classifier.py  collector.py  database.py  (+2 more)
tests/: conftest.py  test_callbacks.py  test_config.py  test_corrections_db.py  test_corrections_db_status_filter.py  test_corrections_relevance.py  test_database_service.py  test_eval_dataset.py  test_eval_harness.py  test_eval_metrics.py  test_eval_seed.py  test_html_strip.py  test_instructions.py  test_labeler_decision.py  test_observability.py  test_retry.py  test_schemas.py
tests/eval/: golden_emails.jsonl
(+27 files in other folders)
