[project]
name = "email-janitor"
version = "0.1.0"
description = "Email Janitor is an agentic solution that cleans up your email inbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.23.0",
    "litellm>=1.81.1",
    "pydantic>=2.12.5",
    "simplegmail>=4.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
